Added minimum-stability: dev to composer.json

--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,5 @@
             "Sudobat\\AdminGenerator\\": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
