--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "sudobat/admin-generator",
     "description": "",
+    "license": "MIT",
     "authors": [
         {
             "name": "Adrià Batlle Cuito",
@@ -10,6 +11,8 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
+    },
+    "require-dev": {
         "mustache/mustache": "dev-master"
     },
     "autoload": {
