--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "4.2.*"
-    },
-    "require-dev": {
-        "mustache/mustache": "dev-master"
+        "illuminate/support": "4.2.*",
+        "mustache/mustache": "2.7.0"
     },
     "autoload": {
         "classmap": [
